added cookies and working

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-    <h1 id="sun-button" onclick="addOne()"> Sun</h1>
-    <h1 id="rainbow-button" onclick="addOne()" > Rainbow</h1>
-    <h1 id="flower-button" onclick="addOne()" >Flower</h1>
+    <h1 id="car1" onclick="SetCar1()">Honda</h1>
+    <h1 id="car2" onclick="SetCar2()">Nissan</h1>
+    <h1 id="car3" onclick="SetCar3()">Toyota</h1>
 
     
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
