--- a/selection.html
+++ b/selection.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1 id="selectedCar"></h1>
     
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="app.js"></script>
+    <script src="app2.js"></script>
 </body>
 </html>
